# openfrp-launcher-rs

./: Cargo.toml  README.md  build.rs
lang/: en.slint  jp.slint  lang.slint  translator.slint  zh_CN.slint  zh_hans.slint  zh_hant.slint
src/: main.rs
ui/: custom-window.slint  home-page.slint  main.slint  main.slint.old  openfrp-api-watermark.slint  page.slint  settings-page.slint  title-bar.slint
ui/pages/: console-page.slint  home-page.slint  page.slint  settings-page.slint  tunnel-page.slint
ui/widgets/: button.slint  combo-box.slint  dialog.slint  line-edit.slint  load.slint  radius-line.slint  scroll-view.slint
ui/window/: custom-window.slint  frame.slint  openfrp-api-watermark.slint  title-bar.slint
