[package]
name = "openfrp-launcher"
version = "0.0.167"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"

[build-dependencies]
slint-build = "1.3.2"

[profile.fast-dev]
inherits = "dev"

[profile.fast-dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
strip = true
panic = "abort"