[package]
name = "openfrp-launcher"
version = "0.0.180"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { "version" = "1.3.2", "features" = ["gettext"] }
rfd = "0.13.0"

[build-dependencies]
slint-build = "1.3.2"

[profile.fast-dev]
inherits = "dev"

[profile.fast-dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
strip = true
panic = "abort"
