[package]
name = "openfrp-launcher"
version = "0.0.195"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { "version" = "1.4.1", "features" = ["gettext"] }
reqwest = { version = "0.11.23",features = ["blocking"]}
tokio = { version = "1", features = ["full"]}
rfd = "^0.13.0"
md-5 = "0.10.6"
image = "0.24.8"

[build-dependencies]
slint-build = "1.4.1"

[profile.fast-dev]
inherits = "dev"

[profile.fast-dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
